<resources>

    <!-- Nome do app -->
    <string name="app_name">Colecionando</string>
    <string name="title_activity_main">Minha Coleção</string>
    <string name="title_cadastro_colec">Adicionando na Coleção</string>
    <string name="title_detalhes_colec">Colecionável</string>
    <string name="title_editar_colec">Editar colecionável</string>
    <string name="title_galeria_colec">Museu de Coleções</string>
    <string name="title_edit_conta">Editar Conta</string>

    <!-- Strings Cadastro & Autenticação -->
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="cadastrar_usuario">Ainda não possui uma conta?</string>
    <string name="login_up">Já possui uma conta?</string>
    <string name="cadastro_up">Cadastre-se já</string>
    <string name="login">Login</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="login_entrar">Entrar</string>
    <string name="cadastrar_cad">Cadastrar</string>
    <string name="cadastro_cad">Cadastro</string>
    <string name="login_lembrar">Se lembrar de mim</string>

    <!-- Strings do NavigationView p1-->
    <string name="navigation_drawer_open">Abrir barra de menu</string>
    <string name="navigation_drawer_close">Fechar barra de menu</string>

    <!-- Strings do NavigationView p2 - parte do navigation_header_main -->
    <string name="nav_header_name">Nome</string>
    <string name="nav_header_email">email.exemplo@gmail.com</string>
    <string name="nav_header_photo">Foto Perfil</string>

    <!-- Strings do NavigationView p3 - parte das opções main_drawer -->
    <string name="nav_colec">Museu Virtual</string>
    <string name="nav_mColec">Minha Coleção</string>
    <string name="nav_perfil">Minha Conta</string>
    <string name="nav_comunic">Ajuda e Contato</string>
    <string name="nav_contato">Contato</string>
    <string name="nav_sobre">Sobre</string>

    <!-- Strings action bar -->
    <string name="action_sair">Sair</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_editar">Editar colecionável</string>
    <string name="action_deletar">Deletar colecionável</string>

    <!-- Strings de fragment - Minha Conta -->
    <string name="minhaConta_nome">Nome do usuário</string>
    <string name="minhaConta_email">E-mail do usuário</string>

    <!-- Strings de Fragment - Minha Coleção & Cadastro Colecionável -->
    <string name="minhaColec_nome">Digite o nome do colecionável</string>
    <string name="minhaColec_descr">Digite uma descrição/Informação geral</string>
    <string name="minhaColec_compradoOnde">Aonde foi adquirido</string>
    <string name="minhaColec_valor">Digite o valor</string>
    <string name="minhaColec_etiqueta">Etiqueta Customizada</string>
    <string name="minhaColec_categoria">Categoria</string>
    <string name="minhaColec_adicionar">Adicionar</string>
    <string name="minhaColec_editar">Atualizar</string>
    <string name="minhaColec_adquirido">Adquirido</string>
    <string name="minhaColec_favoritos">Favorito</string>
    <string name="mColec_foto">Imagem</string>
    <string name="minhaColec_publico">Público</string>
    <string name="minhaColec_particular">Particular</string>
    <string name="mColec_nomeLista">Nome do colecionável</string>
    <string name="mColec_descLista">Aqui vai a descrição do colecionável</string>
    <string name="mColec_dataLista">01/01/2019</string>
    <string name="mColec_etiqLista">Etiqueta</string>
    <string name="colec_filtrarCateg">Filtrar por Categoria</string>

    <!-- Strings de Categorias - Adicionar Categoria no Colecionável (Spinner) -->
    <string-array name="minhaColec_tdcategorias">
        <item>Numismática</item>
        <item>Notafilia</item>
        <item>Brinquedos</item>
        <item>Latas e garrafas</item>
        <item>Antiguidades</item>
        <item>Miniaturas</item>
        <item>Filatelia</item>
        <item>Acessórios</item>
        <item>Revistas em quadrinhos</item>
        <item>Armas</item>
        <item>Discos</item>
        <item>Cartas colecionáveis</item>
        <item>Cartofilia</item>
        <item>Bibliofilia</item>
        <item>Outros</item>
    </string-array>

    <string-array name="minhaColec_categorias">
        <item>Numismática</item>
        <item>Notafilia</item>
        <item>Brinquedos</item>
        <item>Latas e garrafas</item>
        <item>Antiguidades</item>
        <item>Miniaturas</item>
        <item>Filatelia</item>
        <item>Acessórios</item>
    </string-array>

        <string name="colecPart_textFiltro">Selecione o filtro desejado</string>
    <string name="titulo_pager_mColeção">Minha Coleção</string>
    <string name="titulo_pager_mClassif">Meu Perfil</string>
    <string name="colecion_pager">Colecionáveis adquiridos</string>
    <string name="favoritos_pager">Favoritos</string>
    <string name="avaliados_pager">Avaliados</string>
    <string name="totalColeção_pager">Minha Coleção</string>
    <string name="adicionarColec_pager">Adicionar colecionável</string>
    <string name="filtrarColec_pager">Filtrar colecionaveis</string>
    <string name="museuVirtual_maisFiltros">Mais categorias</string>

    <string name="view_errorlist">Conecte-se à internet, você está off-line</string>
    <string name="view_emptyMlist">Adicione uma colecionável clicando no botão à direita</string>
    <string name="view_emptyMuseuList">Não existe nenhum colecionável cadastrado nessa categoria</string>
</resources>
