<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mColeção"
            android:icon="@drawable/ic_icons8_pasta"
            android:title="@string/nav_mColec" />
        <item
            android:id="@+id/nav_coleções"
            android:icon="@drawable/ic_icons8_noticias"
            android:title="@string/nav_colec" />
        <item
            android:id="@+id/nav_mConta"
            android:icon="@drawable/ic_icons8_configuracoes"
            android:title="@string/nav_perfil" />
    </group>
    <item android:title="@string/nav_comunic">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_icons8_contatos"
                android:title="@string/nav_contato"/>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_icons8_sobre"
                android:title="@string/nav_sobre"
                />
        </menu>

    </item>

</menu>
