<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activitys.CadastroColecaoActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_cadastro_colecao">

    <LinearLayout
        android:id="@+id/linearLayoutH"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cadastroColec_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/mColec_foto"
            app:srcCompat="@drawable/imgpadrao_colec1" />

        <ImageView
            android:id="@+id/cadastroColec_img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/mColec_foto"
            app:srcCompat="@drawable/imgpadrao_colec1" />

        <ImageView
            android:id="@+id/cadastroColec_img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/mColec_foto"
            app:srcCompat="@drawable/imgpadrao_colec1" />

    </LinearLayout>

    <Spinner
        android:id="@+id/cadastroColec_spCateg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/cadastroColec_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/minhaColec_nome"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/cadastroColec_desc"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/minhaColec_descr"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="false"
        android:textAlignment="textStart" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.blackcat.currencyedittext.CurrencyEditText
            android:id="@+id/cadastroColec_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_design"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/cadastroColec_etiq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_design"
            android:ems="10"
            android:hint="@string/minhaColec_etiqueta"
            android:inputType="textPersonName"
            android:padding="10dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/cadastroColec_ondeComp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/minhaColec_compradoOnde"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <CheckBox
        android:id="@+id/cadastroColec_checkAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp"
        android:padding="10dp"
        android:text="@string/minhaColec_adquiridoBool"
        android:textSize="16sp" />

    <Button
        android:id="@+id/cadastroColec_btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/minhaColec_adicionar"
        android:textColor="@color/colorText" />

</LinearLayout>