<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/colorText"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/imgColecionavel"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imgpadrao_colec1" />

        <TextView
            android:id="@+id/txtNome"
            style="@style/txtNomeTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgColecionavel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="-147dp"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/mColec_nomeLista" />

        <TextView
            android:id="@+id/txtDescrição"
            style="@style/txtDescrição"
            android:layout_width="234dp"
            android:layout_height="97dp"
            android:layout_below="@+id/txtNome"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/mColec_descLista"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txtData"
            style="@style/txtData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/imgColecionavel"
            android:layout_alignBottom="@+id/txtNome"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="-119dp"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/mColec_dataLista" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
